set 0.0.1 version