@@ -5,55 +5,180 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   
+   <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.0.5</version>
+  </parent>
+  
   <modules>
-	  <module>catalog</module>
+	  <module>../upoint-models</module>
   </modules>
   
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <spring.version>3.0.5</spring.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jdk.version>17</jdk.version>
+    <jsparrow.version>3.20.0</jsparrow.version>
+    <jacoco.version>0.7.6.201602180812</jacoco.version>
+    <maven.compiler.version>3.1</maven.compiler.version>
+    <java.version>17</java.version>
+    <surefireArgLine>-Xmx1024m -XX:MaxPermSize=256m</surefireArgLine>
+    <surefire.version>2.22.0</surefire.version>
+    <lombok.version>1.18.26</lombok.version>
   </properties>
-  <dependencyManagement>
-	  <dependencies>
-	 <dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter</artifactId>
-	    <version>3.0.6</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
-	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-web</artifactId>
-	    <version>3.0.6</version>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
-	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-test</artifactId>
-	    <version>3.0.6</version>
-	    <scope>test</scope>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
-	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-data-jpa</artifactId>
-	    <version>3.0.6</version>
-	</dependency>   
- </dependencies>
-  </dependencyManagement>
-  <build>
   
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <source>17</source>
-          <target>17</target>
-        </configuration>
-      </plugin>
-    </plugins>
-
-  </build>
+  <dependencyManagement>
+	 <dependencies>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-test</artifactId>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+	    <dependency>
+	      <groupId>com.h2database</groupId>
+	      <artifactId>h2</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.junit.jupiter</groupId>
+	      <artifactId>junit-jupiter-engine</artifactId>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.projectlombok</groupId>
+	      <artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+	    	<groupId>org.apache.commons</groupId>
+	    	<artifactId>commons-lang3</artifactId>
+	    </dependency>
+	 </dependencies>
+  </dependencyManagement>
+  
+  <pluginRepositories>
+    <pluginRepository>
+      <id>jsparrow-plugin-repository</id>
+      <name>jSparrow Plugin Repository</name>
+      <url>https://download.jsparrow.eu/maven2/</url>
+    </pluginRepository>
+  </pluginRepositories>
+  
+  <profiles>
+	  <profile>
+		  <id>service</id>
+		  <activation>
+			  <activeByDefault>false</activeByDefault>
+			  <property>
+				  <name>service</name>
+			  </property>
+		  </activation>
+		  <build>
+			<pluginManagement>
+		        <plugins>
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-surefire-plugin</artifactId>
+		                <version>3.0.0-M3</version>
+		            </plugin>
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-compiler-plugin</artifactId>
+		                <version>3.8.0</version>
+		                <configuration>
+		                    <release>17</release>
+		                </configuration>
+		            </plugin>
+		        </plugins>
+		    </pluginManagement>
+			<plugins>
+			  <plugin>
+			    <groupId>eu.jsparrow</groupId>
+			    <artifactId>jsparrow-maven-plugin</artifactId>
+			    <version>${jsparrow.version}</version>
+			  </plugin>
+			  <plugin>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-maven-plugin</artifactId>
+			  </plugin>
+			  <plugin>
+		        <groupId>org.jacoco</groupId>
+		        <artifactId>jacoco-maven-plugin</artifactId>
+		        <version>${jacoco.version}</version>
+		        <executions>
+		            <!-- Prepares the property pointing to the JaCoCo runtime agent which
+		                is passed as VM argument when Maven the Surefire plugin is executed. -->
+		          <execution>
+		            <id>pre-unit-test</id>
+		            <goals>
+		              <goal>prepare-agent</goal>
+		            </goals>
+		            <configuration>
+		                <!-- Sets the name of the property containing the settings for JaCoCo
+		                    runtime agent. -->
+		              <propertyName>surefireArgLine</propertyName>
+		            </configuration>
+		          </execution>
+		            <!-- Ensures that the code coverage report for unit tests is created
+		                after unit tests have been run. -->
+		          <execution>
+		            <id>post-unit-test</id>
+		            <phase>test</phase>
+		            <goals>
+		              <goal>report</goal>
+		            </goals>
+		            <configuration>
+		                <!-- Sets the output directory for the code coverage report. -->
+		              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+		            </configuration>
+		          </execution>
+		        </executions>
+		      </plugin>
+		      
+		    </plugins>
+		  </build>
+	  </profile>
+	  <profile>
+		  <id>models</id>
+		  <activation>
+			  <activeByDefault>false</activeByDefault>
+			  <property>
+				  <name>models</name>
+			  </property>
+		  </activation>
+		  <build>
+			  <plugins>
+				  <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-compiler-plugin</artifactId>
+		                <version>3.8.0</version>
+		                <configuration>
+							<source>17</source>
+          					<target>17</target>
+		                    <release>17</release>
+		                </configuration>
+		            </plugin>
+			  </plugins>
+		  </build>
+	  </profile>
+  </profiles>
+  
 </project>
